--- a/INSTALL
+++ b/INSTALL
@@ -208,11 +208,16 @@ tested with this version of Star Traders:
 Linux distribution      Arch   Glibc  Compiler                 Notes
 =====================  ======  =====  =======================  =====
 Debian GNU/Linux Sid   x86_64  2.29   GNU C Compiler 9.2.1
+Debian GNU/Linux Sid   x86_64  2.29   Clang (LLVM) 8.0.1
 Debian GNU/Linux Sid   i686    2.29   GNU C Compiler 9.2.1
+Debian GNU/Linux Sid   i686    2.29   Clang (LLVM) 8.0.1
 Debian GNU/Linux 10.1  x86_64  2.28   GNU C Compiler 8.3.0
-Ubuntu 18.04           x86_64  2.27   GNU C Compiler 7.3.0
-Ubuntu 18.04           x86_64  2.27   Clang (LLVM) 6.0.0
-Ubuntu 18.04           x86_64  2.27   Portland PGI C/C++ 18.5
+Debian GNU/Linux 10.1  x86_64  2.28   Clang (LLVM) 7.0.1
+Ubuntu 19.10           x86_64  2.30   GNU C Compiler 9.2.1
+Ubuntu 19.10           x86_64  2.30   Clang (LLVM) 9.0.0
+Ubuntu 19.10           x86_64  2.30   Portland PGI C/C++ 19.10
+Ubuntu 18.04.3 LTS     x86_64  2.27   GNU C Compiler 7.4.0
+Ubuntu 18.04.3 LTS     x86_64  2.27   Clang (LLVM) 6.0.0
 Fedora 28              x86_64  2.27   GNU C Compiler 8.1.1
 CentOS 7.5             x86_64  2.17   GNU C Compiler 4.8.5
 CentOS 6.10            x86_64  2.12   GNU C Compiler 4.4.7
