--- a/INSTALL
+++ b/INSTALL
@@ -229,14 +229,14 @@ OpenSUSE Leap 15.1     x86_64  2.26   GNU C Compiler 7.4.1
 =======================  ======  ============================  ============
 Operating system          Arch   Compiler                         Notes
 =======================  ======  ============================  ============
-FreeBSD 11.2             x86_64  Clang (LLVM) 6.0.0            [#freebsd1]_
-NetBSD 8.0               x86_64  GNU C Compiler 5.5.0          [#netbsd1]_
-macOS 10.13              x86_64  Apple Clang (LLVM) 9.1.0      [#macos1]_
-Solaris 11.3 (x86_64)    i386    GNU C Compiler 4.8.2
-Solaris 11.3 (x86_64)    x86_64  GNU C Compiler 4.8.2          [#solaris1]_
-Solaris 11.3 (x86_64)    i386    Oracle Developer Studio 12.6  [#solaris2]_
-Solaris 11.3 (x86_64)    x86_64  Oracle Developer Studio 12.6  [#solaris3]_
-Cygwin 2.10.0 (Win7SP1)  i686    GNU C Compiler 7.3.0
+FreeBSD 12.1             x86_64  Clang (LLVM) 8.0.1            [#freebsd1]_
+NetBSD 8.1               x86_64  GNU C Compiler 5.5.0          [#netbsd1]_
+macOS 10.14              x86_64  Apple Clang (LLVM) 11.0.0     [#macos1]_
+macOS 10.14              x86_64  Apple Clang (LLVM) 11.0.0     [#macos2]_
+Solaris 11.4 (x86_64)    x86_64  GNU C Compiler 7.3.0          [#solaris1]_
+Solaris 11.4 (x86_64)    i386    Oracle Developer Studio 12.6  [#solaris2]_
+Solaris 11.4 (x86_64)    x86_64  Oracle Developer Studio 12.6  [#solaris3]_
+Cygwin 3.0.7 (Win7 SP1)  i686    GNU C Compiler 7.4.0
 =======================  ======  ============================  ============
 
 Notes:
@@ -257,17 +257,25 @@ Notes:
                     CURSES_CFLAGS=-I/usr/pkg/include \
                     LDFLAGS=-L/usr/pkg/lib
 
-.. [#macos1] macOS with the ``gettext`` package installed with Homebrew,
-   using::
+.. [#macos1] macOS with Xcode command line tools, with the ``gettext``
+   package installed with Homebrew, using::
 
         ./configure --with-libintl-prefix=/usr/local/opt/gettext
 
-.. [#solaris1] Using ``./configure CC='gcc -m64'`` for 64-bit user-space.
+.. [#macos2] macOS with Xcode command line tools, with the ``gettext``,
+   ``ncurses`` and ``pkg-config`` packages installed with Homebrew,
+   using::
 
-.. [#solaris2] Using ``./configure CC='/opt/developerstudio12.6/bin/cc'``.
+        ./configure --with-libintl-prefix=/usr/local/opt/gettext \
+                    PKG_CONFIG_PATH=/usr/local/opt/ncurses/lib/pkgconfig
 
-.. [#solaris3] Using ``./configure CC='/opt/developerstudio12.6/bin/cc
-   -m64'``.
+.. [#solaris1] Using ``./configure CURSES_CFLAGS=-I/usr/include/ncurses``.
+
+.. [#solaris2] Using ``./configure CURSES_CFLAGS=-I/usr/include/ncurses
+   CC='/opt/developerstudio12.6/bin/cc'``.
+
+.. [#solaris3] Using ``./configure CURSES_CFLAGS=-I/usr/include/ncurses
+   CC='/opt/developerstudio12.6/bin/cc -m64'``.
 
 The following systems are known *not* to work at the current time; this
 list is almost certainly not exhaustive:
@@ -275,8 +283,8 @@ list is almost certainly not exhaustive:
 ================  ======  ====================  ============
 Operating system   Arch   Compiler              Notes
 ================  ======  ====================  ============
-OpenBSD 6.3       x86_64  GNU C Compiler 4.2.1  [#openbsd1]_
-OpenBSD 6.3       x86_64  Clang (LLVM) 5.0.1    [#openbsd1]_
+OpenBSD 6.6       x86_64  GNU C Compiler 4.2.1  [#openbsd1]_
+OpenBSD 6.6       x86_64  Clang (LLVM) 8.0.1    [#openbsd1]_
 ================  ======  ====================  ============
 
 Notes:
