--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,12 @@ __ https://www.zap.org.au/
 .. contents::
 
 
+Version 7.14 (not yet released)
+-------------------------------
+
+(No changes yet)
+
+
 Version 7.13 (13th November, 2019)
 ----------------------------------
 
